# uncle-joes-api

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  dependencies.py  router.py
app/api/routes/: auth.py  health.py  locations.py  member_auth.py  members.py  menu.py  orders.py  rewards.py  search.py  stats.py
app/core/: auth.py  config.py  errors.py  logging.py
app/db/: bigquery.py
app/repositories/: __init__.py  locations.py  members.py  menu.py  orders.py  search.py  stats.py
app/schemas/: auth.py  location.py  member.py  menu.py  order.py  rewards.py  search.py  stats.py
app/services/: auth.py  locations.py  members.py  menu.py  orders.py  recommendations.py  search.py  stats.py
tests/: test_app.py
