[tool.poetry]
name = "uncle-joes-api"
version = "1.0.0"
description = "Production-ready FastAPI backend for Uncle Joe's Coffee Shop."
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
bcrypt = "*"
email-validator = "*"
fastapi = "0.116.1"
google-cloud-bigquery = "3.37.0"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
uvicorn = { version = "0.35.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
httpx = "0.28.1"
pytest = "8.4.1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
